@@ -7,6 +7,7 @@ This project adheres to [Semantic Versioning](https://semver.org/spec/v2.0.0.htm
 ### Changed
 - Brush strokes are now detected separately, meaning the undo operation won't
 undo everything you have done anymore.
+- Fixed issue with rendering the image when moving to the next patch.
 
 ## [v0.9.1] - 2020-05-27
 ### Changed
